[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cool_asserts = "2.0"
nom = "7.1"
nom-supreme = "0.8"
anyhow = "1.0"
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
